# components/services/router.js
@@ -3,7 +3,9 @@ const router = express.Router()
 const Controller = require('./controller')
 const Validator = require('../base/validator')
 const RequestValidator = require('./../../helpers/validator')
+const Authorization = require('../middleware/requireAuth')
 
+const authorization = new Authorization()
 
 const controller = new Controller()
 const validator = new Validator()
@@ -13,37 +15,41 @@ router
   .route('/')
   .get(
     validator.validateRequest.bind(
-        new Validator().init(new RequestValidator().LIST_SERVICE)
-        ),
-        controller.list.bind(controller)
+      authorization.requireAuth.bind(authorization),
+      new Validator().init(new RequestValidator().LIST_SERVICE)
+    ),
+    controller.list.bind(controller)
   )
 
 
 router
   .route('/')
   .post(
+    authorization.requireAuth.bind(authorization),
     validator.validateRequest.bind(
-        new Validator().init(new RequestValidator().CREATE_SERVICE)
-        ),
-        controller.save.bind(controller)
+      new Validator().init(new RequestValidator().CREATE_SERVICE)
+    ),
+    controller.save.bind(controller)
   )
 
 router
   .route('/:id')
   .patch(
+    authorization.requireAuth.bind(authorization),
     validator.validateRequest.bind(
-        new Validator().init(new RequestValidator().UPDATE_SERVICE)
-        ),
-        controller.update.bind(controller)
+      new Validator().init(new RequestValidator().UPDATE_SERVICE)
+    ),
+    controller.update.bind(controller)
   )
 
 router
   .route('/:id')
   .delete(
+    authorization.requireAuth.bind(authorization),
     validator.validateRequest.bind(
-        new Validator().init(new RequestValidator().DELETE_SERVICE)
-        ),
-        controller.delete.bind(controller)
+      new Validator().init(new RequestValidator().DELETE_SERVICE)
+    ),
+    controller.delete.bind(controller)
   )
 
 module.exports = router
