# components/users/router.js
@@ -3,47 +3,53 @@ const router = express.Router();
 const Controller = require('./controller')
 const Validator = require('../base/validator')
 const RequestValidator = require('../../helpers/validator')
+const Authorization = require('../middleware/requireAuth')
 
+const authorization = new Authorization()
 const controller = new Controller();
 const validator = new Validator();
 
-router 
+router
     .route('/')
     .post(
+        authorization.requireAuth.bind(authorization),
         validator.validateRequest.bind(
             new Validator().init(new RequestValidator().CREATE_USER)
         ),
         controller.save.bind(controller)
     )
 
-router 
+router
     .route('/')
     .get(
+        authorization.requireAuth.bind(authorization),
         validator.validateRequest.bind(
             new Validator().init(new RequestValidator().LIST_USER)
         ),
         controller.list.bind(controller)
     )
 
-router 
+router
     .route('/:id')
     .patch(
+        authorization.requireAuth.bind(authorization),
         validator.validateRequest.bind(
             new Validator().init(new RequestValidator().UPDATE_USER)
         ),
         controller.update.bind(controller)
     )
 
-router 
+router
     .route('/:id')
     .delete(
+        authorization.requireAuth.bind(authorization),
         validator.validateRequest.bind(
             new Validator().init(new RequestValidator().DELETE_USER)
         ),
         controller.delete.bind(controller)
     )
 
-router 
+router
     .route('/signin')
     .post(
         validator.validateRequest.bind(
